--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@off-radio/scraper",
+  "description": "Off's radio scraper service.",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd -r @babel/register -r esm --respawn --files --inspect -- src/index.ts | pino-pretty",
+    "dev": "cross-env NODE_PATH=src tsnd -r @babel/register -r esm --respawn src/index.ts | pino-pretty",
     "build": "rimraf ./dist && babel ./src -d ./dist --extensions .ts --copy-files",
-    "start": "yarn build && cross-env NODE_ENV=production node -r esm -r source-map-support/register ./dist/index.js",
+    "start": "yarn build && cross-env NODE_ENV=production NODE_PATH=dist node -r esm -r source-map-support/register ./dist/index.js",
     "lint:base": "eslint --ext .js,.json,.ts",
     "lint": "yarn lint:base src",
     "typecheck": "tsc"
@@ -50,7 +51,8 @@
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
-    "ts-node-dev": "^1.0.0-pre.63",
+    "ts-node-dev": "^1.0.0",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
@@ -58,7 +60,12 @@
     "cross-env": "^7.0.2",
     "date-fns": "^2.16.1",
     "fastify": "^3.5.1",
+    "fastify-autoload": "^3.3.0",
+    "fastify-cors": "^4.1.0",
+    "fastify-helmet": "^5.0.3",
+    "fastify-plugin": "^3.0.0",
     "fastify-static": "^3.2.1",
+    "fastify-swagger": "^3.4.0",
     "pino": "^6.7.0",
     "puppeteer": "^5.3.1"
   }
